tests/resources/invalid/type/class/type_def_with_private_function.mamba
type MyType
    def private my_function() -> Int
